data/derived/fa15/progs/unify/prog3754.ml.out
Characters 88-92:
  List.fold_left f base fs;;
                   ^^^^
Error: This expression has type 'a -> 'a
       but an expression was expected of type 'b list
